--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
    <p id="question"></p>
    <p id="answer"></p>
       <div id="question-container" class="hide"></div>
-   <div id="qurstion">Question</div>
-   <div id="answers-buttons" class="btn-grid">
-       <button class="btn">Choice 1</button>
-       <button class="btn">Choice 2</button>
-       <button class="btn"> Choice 3</button>
-       <button class="btn"> Choice 4</button>
+   <div id="question">Question</div>
+   <div id="answer-buttons" class="btn-grid">
+       
        </div>
        </div>
 
    <div class="controller">
        <button id="start-btn" class="start-btn btn">Start Quiz</button>
+       <button id="next-btn" class="next-btn btn hide"> Next</button>
 </div>
 </body>
 </html>
